--- a/test/dev/sass/resources/resources.scss
+++ b/test/dev/sass/resources/resources.scss
@@ -1,3 +1,3 @@
-@import "flex-box_mixins";
-@import "media-query_mixins";
-@import "general_mixins";
+@import "flex-box_mixins.scss";
+@import "media-query_mixins.scss";
+@import "general_mixins.scss";
